<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <VideoView
        android:id="@+id/vv_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        app:cardBackgroundColor="@color/design_default_color_secondary_variant"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:orientation="vertical">

            <EditText
                style="@style/ThemeOverlay.Material3.TextInputEditText"
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="10dp"
                android:background="@drawable/custom_edit_text"
                android:elevation="6dp"
                android:hint="@string/username" />

            <CheckBox
                style="@style/Widget.Material3.CompoundButton.CheckBox.Login"
                android:id="@+id/cb_test_yourself"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_yourself"
                android:button="@null" />

            <Button
                style="@style/Widget.Material3.Button.LoginButton"
                android:id="@+id/btn_get_started"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/play" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>