<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:gravity="center"
        android:textSize="@dimen/big_text_size"
        android:textStyle="bold"
        android:textColor="@color/text_color"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/points"
        android:textSize="@dimen/text_size"
        android:textColor="@color/text_color"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tvUsername"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvAttempts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attempts"
        android:textSize="@dimen/text_size"
        android:textColor="@color/text_color"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintTop_toBottomOf="@id/tvUsername"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" >

        <LinearLayout
            android:id="@+id/row_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/cardContainer1"
                android:tag="card1"
                android:layout_width="60dp"
                android:layout_height="120dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:name="com.deimoshall.matchprogramminglanguages.BackCardFragment"
                tools:layout="@layout/fragment_back_card" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/cardContainer2"
                android:tag="card2"
                android:layout_width="60dp"
                android:layout_height="120dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:name="com.deimoshall.matchprogramminglanguages.BackCardFragment"
                tools:layout="@layout/fragment_back_card" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/cardContainer3"
                android:tag="card3"
                android:layout_width="60dp"
                android:layout_height="120dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cardContainer2"
                android:name="com.deimoshall.matchprogramminglanguages.BackCardFragment"
                tools:layout="@layout/fragment_back_card" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/cardContainer4"
                android:tag="card4"
                android:layout_width="60dp"
                android:layout_height="120dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:name="com.deimoshall.matchprogramminglanguages.BackCardFragment"
                tools:layout="@layout/fragment_back_card" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/cardContainer5"
                android:layout_width="60dp"
                android:layout_height="120dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:name="com.deimoshall.matchprogramminglanguages.BackCardFragment"
                tools:layout="@layout/fragment_back_card" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/cardContainer6"
                android:layout_width="60dp"
                android:layout_height="120dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:name="com.deimoshall.matchprogramminglanguages.BackCardFragment"
                tools:layout="@layout/fragment_back_card" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/cardContainer7"
                android:layout_width="60dp"
                android:layout_height="120dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cardContainer2"
                android:name="com.deimoshall.matchprogramminglanguages.BackCardFragment"
                tools:layout="@layout/fragment_back_card" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/cardContainer8"
                android:layout_width="60dp"
                android:layout_height="120dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:name="com.deimoshall.matchprogramminglanguages.BackCardFragment"
                tools:layout="@layout/fragment_back_card" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/cardContainer9"
                android:layout_width="60dp"
                android:layout_height="120dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:name="com.deimoshall.matchprogramminglanguages.BackCardFragment"
                tools:layout="@layout/fragment_back_card" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/cardContainer10"
                android:layout_width="60dp"
                android:layout_height="120dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:name="com.deimoshall.matchprogramminglanguages.BackCardFragment"
                tools:layout="@layout/fragment_back_card" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/cardContainer11"
                android:layout_width="60dp"
                android:layout_height="120dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cardContainer2"
                android:name="com.deimoshall.matchprogramminglanguages.BackCardFragment"
                tools:layout="@layout/fragment_back_card" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/cardContainer12"
                android:layout_width="60dp"
                android:layout_height="120dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:name="com.deimoshall.matchprogramminglanguages.BackCardFragment"
                tools:layout="@layout/fragment_back_card" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/cardContainer13"
                android:layout_width="60dp"
                android:layout_height="120dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:name="com.deimoshall.matchprogramminglanguages.BackCardFragment"
                tools:layout="@layout/fragment_back_card" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/cardContainer14"
                android:layout_width="60dp"
                android:layout_height="120dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:name="com.deimoshall.matchprogramminglanguages.BackCardFragment"
                tools:layout="@layout/fragment_back_card" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/cardContainer15"
                android:layout_width="60dp"
                android:layout_height="120dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cardContainer2"
                android:name="com.deimoshall.matchprogramminglanguages.BackCardFragment"
                tools:layout="@layout/fragment_back_card" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/cardContainer16"
                android:layout_width="60dp"
                android:layout_height="120dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:name="com.deimoshall.matchprogramminglanguages.BackCardFragment"
                tools:layout="@layout/fragment_back_card" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>